added line height

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@ckeditor/ckeditor5-typing": "^24.0.0",
     "@ckeditor/ckeditor5-word-count": "^24.0.0",
     "ckeditor5-footnote": "^0.1.0",
+    "ckeditor5-line-height-plugin": "^0.1.4",
     "css-loader": "^5.0.1",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
