--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.44.2",
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^25.0.0",
     "webpack-cli": "^4.2.0"
   },
   "engines": {
@@ -89,5 +90,7 @@
     "build/**",
     "packages/**"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "@ckeditor/ckeditor5-ckfinder": "^25.0.0"
+  }
 }
